--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "autoload": {
         "psr-4": {
             "Anax\\": "src/",
-            "ligm19\\": "src/"
-        }
+            "Pon\\": "src/"
+        },
+        "files": ["src/function.php"]
     },
     "require": {
-        "anax/anax-oophp-me": "^2.0.0"
+        "anax/anax-oophp-me": "^2.0.0@beta",
+        "anax/database": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
