--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
     "autoload": {
         "psr-4": {
             "Anax\\": "src/",
-            "Mahm\\": "src/"
+            "Aisa\\": "src/"
         },
         "files": ["src/function.php"]
     },
     "require": {
-        "anax/anax-oophp-me": "^1.0.5",
-        "anax/database": "^2.0"
+        "anax/anax-oophp-me": "^2.0.0@beta",
+        "anax/database": "^2.2",
+        "michelf/php-markdown": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
